include $(srcdir)/../common-rules.make

lib_LIBRARIES =                             \
	libfunctionals.a

noinst_HEADERS =                            \
	BLYPFunctional.h                    \
	LDAFunctional.h                     \
	PBEFunctional.h                     \
	PBERevFunctional.h                  \
	PBESolFunctional.h                  \
	XCFunctional.h

libfunctionals_a_SOURCES =                  \
	BLYPFunctional.cc                   \
	LDAFunctional.cc                    \
	PBEFunctional.cc                    \
	PBERevFunctional.cc                 \
	PBESolFunctional.cc
