include $(srcdir)/../common-rules.make

lib_LIBRARIES =                             \
	libmath.a

noinst_HEADERS =                            \
	blas.h                              \
	D3vector.h                          \
	LineMinimizer.h                     \
	Matrix.h                            

libmath_a_SOURCES =                         \
	Matrix.cc
