include $(srcdir)/../common-rules.make

lib_LIBRARIES =                             \
	libmath.a

noinst_HEADERS =                            \
	blas.h                              \
	d3vector.h                          \
	lineminimizer.h                     \
	matrix.h                            

libmath_a_SOURCES =                         \
	matrix.cc
