include $(srcdir)/../common-rules.make

lib_LIBRARIES =                             \
	libpseudo.a

noinst_HEADERS =                            \
	anygrid.hpp                         \
	base.hpp                            \
	element.hpp                         \
	psml.hpp                            \
	qso.hpp                             \
	share_directory.hpp                 \
	spline.h                            \
	upf.hpp                             \
	upf1.hpp                            \
	upf2.hpp

libpseudo_a_SOURCES =                       \
	spline.cc
