include $(srcdir)/../common-rules.make

lib_LIBRARIES =                             \
	libui.a

noinst_HEADERS =                            \
	AngleCmd.h                          \
	AtomCmd.h                           \
	ComputeMLWFCmd.h                    \
	ConstraintCmd.h                     \
	CoordinatesCmd.h                    \
	DistanceCmd.h                       \
	EmpiricalPotentialCmd.h             \
	FoldInWsCmd.h                       \
        HelpCmd.h                           \
	KpointCmd.h                         \
        ListAtomsCmd.h                      \
        ListConstraintsCmd.h                \
	ListSpeciesCmd.h                    \
	LoadCmd.h                           \
	LoaddenCmd.h                        \
	LockCmd.h                           \
	MDSaveCmd.h                         \
	MMAtomCmd.h                         \
	MMSpeciesCmd.h                      \
	ParOptCmd.h                         \
	PlotCmd.h                           \
	PrintCmd.h \
	PromoteOccCmd.h \
	QuitCmd.h \
	RandomizeRealWfCmd.h \
	RandomizeVelCmd.h \
	RandomizeWfCmd.h \
	ResetVcmCmd.h \
	RunCmd.h \
	SaveCmd.h \
	SavedenCmd.h \
	SaveESPCmd.h \
	SavesysCmd.h \
	SetCmd.h \
	SetVelCmd.h \
	SetPosCmd.h \
	ShiftWFCmd.h \
	SpeciesCmd.h \
	StatusCmd.h \
	StrainCmd.h \
	SymmetryCmd.h \
	TorsionCmd.h \
	UnlockCmd.h \
	UserInterface.h \
	WFPhaseRealCmd.h

libui_a_SOURCES =                           \
	ComputeMLWFCmd.cc \
	LoadCmd.cc \
	LoaddenCmd.cc \
	MDSaveCmd.cc \
	ParOptCmd.cc \
	PlotCmd.cc \
	RunCmd.cc \
	SaveCmd.cc \
	SavedenCmd.cc \
	SaveESPCmd.cc \
	SavesysCmd.cc \
	UserInterface.cc
