include $(srcdir)/../common-rules.make

noinst_HEADERS =                            \
	AtomsDyn.h                          \
	CellDyn.h                           \
	Cell.h                              \
	CellLock.h                          \
	CellMass.h                          \
	CellStepFreq.h                      \
	CenterOfMass.h                      \
	ChargeMixCoeff.h                    \
	ChargeMixing.h                      \
	ChargeMixNdim.h                     \
	ChargeMixRcut.h                     \
	Debug.h                             \
	Dt.h                                \
	Ecutden.h                           \
	Ecut.h                              \
	Ecutprec.h                          \
	Ecuts.h                             \
	Emass.h                             \
	EnthalpyPressure.h                  \
	EnthalpyThreshold.h                 \
	EsmBC.h                             \
	EsmW.h                              \
	ExtStress.h                         \
	FcpMu.h                             \
	FcpPmass.h                          \
	FcpThermostat.h                     \
	FcpThTemp.h                         \
	FcpThTime.h                         \
	FcpThWidth.h                        \
	FermiTemp.h                         \
	Force_Complex_WF.h                  \
	HubbardU.h                          \
	HugDeltaTemp.h                      \
	HugFreq.h                           \
	HugoniostatVar.h                    \
	IPrint.h                            \
	MatrixLoc.h                         \
	MDIter.h                            \
	Memory.h                            \
	NA_overlaps.h                       \
	Nempty.h                            \
	NetCharge.h                         \
	Nkpoints.h                          \
	Non_Selfconsistent_Energy_Output.h  \
	Nparallelkpts.h                     \
	Nrowmax.h                           \
	Pblock.h                            \
	RefCell.h                           \
	RunTimer.h                          \
	SaveDenFreq.h                       \
	SaveFreq.h                          \
	SaveWfFreq.h                        \
	Smearing.h                          \
	SmearingWidth.h                     \
	Spin.h                              \
	StandardVar.h                       \
	Stress.h                            \
	TDDt.h                              \
	Thermostat.h                        \
	ThresholdForce.h                    \
	ThresholdScf.h                      \
	ThresholdStress.h                   \
	ThTemp.h                            \
	ThTime.h                            \
	ThWidth.h                           \
	VectorPotentialDynamics.h           \
	VectorPotentialVar.h                \
	VdW.h                               \
	WfDiag.h                            \
	WfDyn.h                             \
	WfExtrap.h                          \
	WFPhaseRealVar.h                    \
	Xc.h


