## Process this file with automake to produce Makefile.in

## Copyright (C) 2018 X. Andrade
##
## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 2, or (at your option)
## any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program; if not, write to the Free Software
## Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
## 02110-1301, USA.
##

ldadir = $(pkgdatadir)/pseudopotentials/quantum-simulation.org/hscv/lda

dist_lda_DATA =                           \
	Ac_HSCV_LDA-1.0.xml               \
	Ag_HSCV_LDA-1.0.xml               \
	Al_HSCV_LDA-1.0.xml               \
	Ar_HSCV_LDA-1.0.xml               \
	As_HSCV_LDA-1.0.xml               \
	At_HSCV_LDA-1.0.xml               \
	Au_HSCV_LDA-1.0.xml               \
	Ba_HSCV_LDA-1.0.xml               \
	B_HSCV_LDA-1.0.xml                \
	Bi_HSCV_LDA-1.0.xml               \
	Br_HSCV_LDA-1.0.xml               \
	Ca_HSCV_LDA-1.0.xml               \
	Cd_HSCV_LDA-1.0.xml               \
	Ce_HSCV_LDA-1.0.xml               \
	C_HSCV_LDA-1.0.xml                \
	Cl_HSCV_LDA-1.0.xml               \
	Co_HSCV_LDA-1.0.xml               \
	Cr_HSCV_LDA-1.0.xml               \
	Cs_HSCV_LDA-1.0.xml               \
	Cu_HSCV_LDA-1.0.xml               \
	Dy_HSCV_LDA-1.0.xml               \
	Er_HSCV_LDA-1.0.xml               \
	Eu_HSCV_LDA-1.0.xml               \
	Fe_HSCV_LDA-1.0.xml               \
	F_HSCV_LDA-1.0.xml                \
	Fr_HSCV_LDA-1.0.xml               \
	Ga_HSCV_LDA-1.0.xml               \
	Gd_HSCV_LDA-1.0.xml               \
	Ge_HSCV_LDA-1.0.xml               \
	He_HSCV_LDA-1.0.xml               \
	Hf_HSCV_LDA-1.1.xml               \
	Hg_HSCV_LDA-1.0.xml               \
	H_HSCV_LDA-1.0.xml                \
	Ho_HSCV_LDA-1.0.xml               \
	I_HSCV_LDA-1.0.xml                \
	In_HSCV_LDA-1.0.xml               \
	Ir_HSCV_LDA-1.1.xml               \
	K_HSCV_LDA-1.0.xml                \
	Kr_HSCV_LDA-1.0.xml               \
	La_HSCV_LDA-1.0.xml               \
	Li_HSCV_LDA-1.0.xml               \
	Lu_HSCV_LDA-1.0.xml               \
	Mg_HSCV_LDA-1.0.xml               \
	Mn_HSCV_LDA-1.0.xml               \
	Mo_HSCV_LDA-1.0.xml               \
	Na_HSCV_LDA-1.0.xml               \
	Nb_HSCV_LDA-1.0.xml               \
	Nd_HSCV_LDA-1.0.xml               \
	Ne_HSCV_LDA-1.0.xml               \
	N_HSCV_LDA-1.0.xml                \
	Ni_HSCV_LDA-1.0.xml               \
	Np_HSCV_LDA-1.0.xml               \
	O_HSCV_LDA-1.0.xml                \
	Os_HSCV_LDA-1.0.xml               \
	Pa_HSCV_LDA-1.0.xml               \
	Pb_HSCV_LDA-1.0.xml               \
	Pd_HSCV_LDA-1.0.xml               \
	P_HSCV_LDA-1.0.xml                \
	Pm_HSCV_LDA-1.0.xml               \
	Po_HSCV_LDA-1.0.xml               \
	Pr_HSCV_LDA-1.0.xml               \
	Pt_HSCV_LDA-1.0.xml               \
	Pu_HSCV_LDA-1.0.xml               \
	Ra_HSCV_LDA-1.0.xml               \
	Rb_HSCV_LDA-1.0.xml               \
	Re_HSCV_LDA-1.0.xml               \
	Rh_HSCV_LDA-1.0.xml               \
	Rn_HSCV_LDA-1.0.xml               \
	Ru_HSCV_LDA-1.0.xml               \
	Sb_HSCV_LDA-1.0.xml               \
	Sc_HSCV_LDA-1.0.xml               \
	Se_HSCV_LDA-1.0.xml               \
	S_HSCV_LDA-1.0.xml                \
	Si_HSCV_LDA-1.0.xml               \
	Sm_HSCV_LDA-1.0.xml               \
	Sn_HSCV_LDA-1.0.xml               \
	Sr_HSCV_LDA-1.0.xml               \
	Ta_HSCV_LDA-1.0.xml               \
	Tb_HSCV_LDA-1.0.xml               \
	Tc_HSCV_LDA-1.0.xml               \
	Te_HSCV_LDA-1.0.xml               \
	Th_HSCV_LDA-1.0.xml               \
	Ti_HSCV_LDA-1.0.xml               \
	Tl_HSCV_LDA-1.0.xml               \
	Tm_HSCV_LDA-1.0.xml               \
	U_HSCV_LDA-1.0.xml                \
	V_HSCV_LDA-1.0.xml                \
	W_HSCV_LDA-1.0.xml                \
	Xe_HSCV_LDA-1.2.xml               \
	Yb_HSCV_LDA-1.0.xml               \
	Y_HSCV_LDA-1.0.xml                \
	Zn_HSCV_LDA-1.0.xml               \
	Zr_HSCV_LDA-1.1.xml

# In order to get `make check' working with a `VPATH' build (e. g. to use
# the `distcheck' target) the pseudopotential files have to be accessible
# in the build tree.
check:
	for f in $(dist_lda_DATA); do \
	  if [ ! -e $$f -o $$f -ot $(srcdir)/$$f ]; then \
	    cp $(srcdir)/$$f $$f; \
	  fi \
	done

clean-local:
	@if [ -n "$(top_builddir)" -a "$(top_builddir)" != "$(top_srcdir)" ]; then \
	  rm -f $(dist_lda_DATA); \
	fi

.PHONY: check
