## Process this file with automake to produce Makefile.in

## Copyright (C) 2018 X. Andrade
##
## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 2, or (at your option)
## any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program; if not, write to the Free Software
## Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
## 02110-1301, USA.
##

pbedir = $(pkgdatadir)/pseudopotentials/quantum-simulation.org/hscv/pbe

dist_pbe_DATA =                           \
	Ac_HSCV_PBE-1.0.xml               \
	Ag_HSCV_PBE-1.0.xml               \
	Al_HSCV_PBE-1.0.xml               \
	Ar_HSCV_PBE-1.0.xml               \
	As_HSCV_PBE-1.0.xml               \
	At_HSCV_PBE-1.0.xml               \
	Au_HSCV_PBE-1.0.xml               \
	Ba_HSCV_PBE-1.0.xml               \
	B_HSCV_PBE-1.0.xml                \
	Bi_HSCV_PBE-1.0.xml               \
	Br_HSCV_PBE-1.0.xml               \
	Ca_HSCV_PBE-1.0.xml               \
	Cd_HSCV_PBE-1.0.xml               \
	Ce_HSCV_PBE-1.0.xml               \
	C_HSCV_PBE-1.0.xml                \
	Cl_HSCV_PBE-1.0.xml               \
	Co_HSCV_PBE-1.1.xml               \
	Cr_HSCV_PBE-1.0.xml               \
	Cs_HSCV_PBE-1.0.xml               \
	Cu_HSCV_PBE-1.0.xml               \
	D_HSCV_PBE-1.0.xml                \
	Dy_HSCV_PBE-1.0.xml               \
	Er_HSCV_PBE-1.0.xml               \
	Eu_HSCV_PBE-1.0.xml               \
	Fe_HSCV_PBE-1.0.xml               \
	F_HSCV_PBE-1.0.xml                \
	Fr_HSCV_PBE-1.0.xml               \
	Ga_HSCV_PBE-1.0.xml               \
	Gd_HSCV_PBE-1.0.xml               \
	Ge_HSCV_PBE-1.0.xml               \
	He_HSCV_PBE-1.0.xml               \
	Hf_HSCV_PBE-1.1.xml               \
	Hg_HSCV_PBE-1.0.xml               \
	H_HSCV_PBE-1.0.xml                \
	Ho_HSCV_PBE-1.0.xml               \
	I_HSCV_PBE-1.0.xml                \
	In_HSCV_PBE-1.0.xml               \
	Ir_HSCV_PBE-1.1.xml               \
	K_HSCV_PBE-1.0.xml                \
	Kr_HSCV_PBE-1.0.xml               \
	La_HSCV_PBE-1.0.xml               \
	Li_HSCV_PBE-1.0.xml               \
	Lu_HSCV_PBE-1.0.xml               \
	Mg_HSCV_PBE-1.0.xml               \
	Mn_HSCV_PBE-1.0.xml               \
	Mo_HSCV_PBE-1.0.xml               \
	Na_HSCV_PBE-1.0.xml               \
	Nb_HSCV_PBE-1.0.xml               \
	Nd_HSCV_PBE-1.0.xml               \
	Ne_HSCV_PBE-1.0.xml               \
	N_HSCV_PBE-1.0.xml                \
	Ni_HSCV_PBE-1.0.xml               \
	Np_HSCV_PBE-1.0.xml               \
	O_HSCV_PBE-1.0.xml                \
	Os_HSCV_PBE-1.0.xml               \
	Pa_HSCV_PBE-1.0.xml               \
	Pb_HSCV_PBE-1.0.xml               \
	Pd_HSCV_PBE-1.0.xml               \
	P_HSCV_PBE-1.0.xml                \
	Pm_HSCV_PBE-1.0.xml               \
	Po_HSCV_PBE-1.0.xml               \
	Pr_HSCV_PBE-1.0.xml               \
	Pt_HSCV_PBE-1.0.xml               \
	Pu_HSCV_PBE-1.0.xml               \
	Ra_HSCV_PBE-1.0.xml               \
	Rb_HSCV_PBE-1.0.xml               \
	Re_HSCV_PBE-1.0.xml               \
	Rh_HSCV_PBE-1.0.xml               \
	Rn_HSCV_PBE-1.0.xml               \
	Ru_HSCV_PBE-1.0.xml               \
	Sb_HSCV_PBE-1.0.xml               \
	Sc_HSCV_PBE-1.0.xml               \
	Se_HSCV_PBE-1.0.xml               \
	S_HSCV_PBE-1.0.xml                \
	Si_HSCV_PBE-1.0.xml               \
	Sm_HSCV_PBE-1.0.xml               \
	Sn_HSCV_PBE-1.0.xml               \
	Sr_HSCV_PBE-1.0.xml               \
	Ta_HSCV_PBE-1.0.xml               \
	Tb_HSCV_PBE-1.0.xml               \
	Tc_HSCV_PBE-1.0.xml               \
	Te_HSCV_PBE-1.0.xml               \
	Th_HSCV_PBE-1.0.xml               \
	Ti_HSCV_PBE-1.0.xml               \
	Tl_HSCV_PBE-1.0.xml               \
	Tm_HSCV_PBE-1.0.xml               \
	U_HSCV_PBE-1.0.xml                \
	V_HSCV_PBE-1.0.xml                \
	W_HSCV_PBE-1.0.xml                \
	Xe_HSCV_PBE-1.0.xml               \
	Yb_HSCV_PBE-1.0.xml               \
	Y_HSCV_PBE-1.0.xml                \
	Zn_HSCV_PBE-1.0.xml               \
	Zr_HSCV_PBE-1.1.xml

# In order to get `make check' working with a `VPATH' build (e. g. to use
# the `distcheck' target) the pseudopotential files have to be accessible
# in the build tree.
check:
	for f in $(dist_pbe_DATA); do \
	  if [ ! -e $$f -o $$f -ot $(srcdir)/$$f ]; then \
	    cp $(srcdir)/$$f $$f; \
	  fi \
	done

clean-local:
	@if [ -n "$(top_builddir)" -a "$(top_builddir)" != "$(top_srcdir)" ]; then \
	  rm -f $(dist_pbe_DATA); \
	fi

.PHONY: check
